@@ -17,7 +17,6 @@ Homepage: http://www.gnu.org/s/gdb/
 
 Package: gdb
 Architecture: any
-Section: devel
 Depends: ${shlibs:Depends}, ${misc:Depends},
  gdbserver [amd64 armel armhf i386 ia64 m32r m68k mips mipsel powerpc powerpcspe ppc64 s390 s390x x32]
 Suggests: gdb-doc
@@ -30,7 +29,6 @@ Description: The GNU Debugger
 
 Package: gdb-minimal
 Architecture: any
-Section: devel
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: gdb
 Description: The GNU Debugger
@@ -45,7 +43,6 @@ Description: The GNU Debugger
 
 Package: gdb64
 Architecture: i386 powerpc s390 sparc
-Section: devel
 Depends: ${shlibs:Depends}, gdb (= ${binary:Version}), ${misc:Depends}
 Description: The GNU Debugger (64-bit)
  GDB is a source-level debugger, capable of breaking programs at
@@ -56,7 +53,6 @@ Description: The GNU Debugger (64-bit)
 
 Package: gdb-multiarch
 Architecture: any
-Section: devel
 Depends: ${shlibs:Depends}, gdb (= ${binary:Version}), ${misc:Depends}
 Description: The GNU Debugger (with support for multiple architectures)
  GDB is a source-level debugger, capable of breaking programs at
@@ -71,7 +67,6 @@ Description: The GNU Debugger (with support for multiple architectures)
 Package: gdbserver
 Architecture: amd64 armel armhf i386 ia64 m32r m68k mips mipsel powerpc powerpcspe ppc64 s390 s390x x32
 # Also supports mips64, but dpkg doesn't know of any mips64 ABIs yet
-Section: devel
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: gdb (<< 7.0.1-1)
 Description: The GNU Debugger (remote server)
@@ -86,7 +81,6 @@ Description: The GNU Debugger (remote server)
 
 Package: gdb-source
 Architecture: all
-Section: devel
 Depends: ${misc:Depends}
 Description: The GNU Debugger (source)
  GDB is a source-level debugger, capable of breaking programs at
